RESOLVED FIXED283371
(visionOS): TZoneHeapInlines.h:191:5: note: expanded from macro 'MAKE_BTZONE_MALLOCED_IMPL'
https://bugs.webkit.org/show_bug.cgi?id=283371
Summary (visionOS): TZoneHeapInlines.h:191:5: note: expanded from macro 'MAKE_BTZONE_...
Michael Saboff
Reported 2024-11-19 11:06:22 PST
Error: In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/SYMROOT/BuiltProducts/DerivedSources/WebCore/unified-sources/UnifiedSource96.cpp:7: /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/WebCore_Sim/Source/WebCore/Modules/webxr/XRGPUBinding.cpp:56:1: error: call to non-static member function without an object argument 56 | WTF_MAKE_TZONE_OR_ISO_ALLOCATED_IMPL(XRGPUBinding); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/SYMROOT/BuiltProducts/DerivedSources/WebCore/unified-sources/UnifiedSource96.cpp:1: In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/WebCore_Sim/Source/WebCore/WebCorePrefix.h:167: /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/.cas-nfs/0~jMm6bHXtEZuhQ_mJTkjmoXvIOjg0c78V_ucLoExXl67LkBKizWF11g-erkbtJQD-c7GgfDvf9tztwrR3hYKKzA/Applications/Xcode.app/Contents/Developer/Platforms/XRSimulator.platform/Developer/SDKs/XRSimulator3.0.Internal.sdk/usr/local/include/wtf/TZoneMallocInlines.h:96:52: note: expanded from macro 'WTF_MAKE_TZONE_OR_ISO_ALLOCATED_IMPL' 96 | #define WTF_MAKE_TZONE_OR_ISO_ALLOCATED_IMPL(name) MAKE_BTZONE_MALLOCED_IMPL(name, TZoneHeap) | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/SYMROOT/BuiltProducts/DerivedSources/WebCore/unified-sources/UnifiedSource96.cpp:1: In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/WebCore_Sim/Source/WebCore/WebCorePrefix.h:167: In file included from /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/.cas-nfs/0~jMm6bHXtEZuhQ_mJTkjmoXvIOjg0c78V_ucLoExXl67LkBKizWF11g-erkbtJQD-c7GgfDvf9tztwrR3hYKKzA/Applications/Xcode.app/Contents/Developer/Platforms/XRSimulator.platform/Developer/SDKs/XRSimulator3.0.Internal.sdk/usr/local/include/wtf/TZoneMallocInlines.h:75: /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/.cas-nfs/0~jMm6bHXtEZuhQ_mJTkjmoXvIOjg0c78V_ucLoExXl67LkBKizWF11g-erkbtJQD-c7GgfDvf9tztwrR3hYKKzA/Applications/Xcode.app/Contents/Developer/Platforms/XRSimulator.platform/Developer/SDKs/XRSimulator3.0.Internal.sdk/usr/local/include/bmalloc/TZoneHeapInlines.h:191:5: note: expanded from macro 'MAKE_BTZONE_MALLOCED_IMPL' 191 | btzoneHeap().deallocate(p); \ | ^~~~~~~~~~ 5 errors generated.
Attachments
Michael Saboff
Comment 1 2024-11-19 11:06:34 PST
Michael Saboff
Comment 2 2024-11-19 11:29:09 PST
EWS
Comment 3 2024-11-19 11:33:49 PST
Committed 286811@main (95a7834a4e95): <https://commits.webkit.org/286811@main> Reviewed commits have been landed. Closing PR #36858 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.