(visionOS): TZoneHeapInlines.h:191:5: note: expanded from macro 'MAKE_BTZONE_MALLOCED_IMPL' https://bugs.webkit.org/show_bug.cgi?id=283371 rdar://140210930

Reviewed by Yusuke Suzuki.

This is a speculative fix for a build failure.

* Source/WebCore/Modules/webxr/XRGPUBinding.h:

Canonical link: https://commits.webkit.org/286811@main