Source/WebCore/Modules/webxr/XRGPUBinding.h
@@ -34,9 +34,9 @@
 #include "XRGPUProjectionLayerInit.h"
 
 #include <ExceptionOr.h>
-#include <wtf/IsoMalloc.h>
 #include <wtf/Ref.h>
 #include <wtf/RefPtr.h>
+#include <wtf/TZoneMalloc.h>
 
 namespace WebCore {
 
@@ -67,7 +67,7 @@ struct XRQuadLayerInit;
 
 // https://github.com/immersive-web/WebXR-WebGPU-Binding/blob/main/explainer.md
 class XRGPUBinding : public RefCounted<XRGPUBinding> {
-    WTF_MAKE_ISO_ALLOCATED(XRGPUBinding);
+    WTF_MAKE_TZONE_OR_ISO_ALLOCATED(XRGPUBinding);
 public:
     static Ref<XRGPUBinding> create(const WebXRSession& session, GPUDevice& device)
     {
